<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.newsapp.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_navigation_news_to_navigation_news_details"
            app:destination="@id/navigation_news_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.newsapp.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_navigation_users_to_navigation_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news_details"
        android:name="com.example.newsapp.ui.news_details.NewsDetailsFragment"
        android:label="@string/news_details_title"
        tools:layout="@layout/fragment_news_details">
        <argument
            android:name="news_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.newsapp.ui.user_map.UserMapFragment"
        android:label="@string/user_map_title"
        tools:layout="@layout/fragment_user_map">
        <argument
            android:name="user_id"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>
</navigation>
